----------------------------------------

- BUG#17061126: mysqldiff needs an auto_increment ignoring option
- BUG#17205680: non-deterministic failure of rpl_admin tests
- BUG#17256821: Commercial and GPL msi distro shares build descriptor
- BUG#17271100: mysqldbexport does not export fkeys
- BUG#17316515: Community distros contain both GPL and Commercial license

Release 1.3.4 (Released July 18, 2013)
--------------------------------------

- BUG#17064771: Add platform name and version to deb package.
- WL#7191: Commercial Distribution of MySQL Utilities

Release 1.2.5 (Released July 18, 2013)
--------------------------------------

- BUG#12889758: use db pattern for --exclude in mysqldbcopy and mysqldbexport
- BUG#13103450: mysqldbimport fails to import sakila database
- BUG#13577018: mysqluserclone silently ignores destination, if not needed
- BUG#13773197: mysqlserverclone complains it can't find mysqld
- BUG#16003529: The test import_rpl runs inconsistently on windows
- BUG#16005010: Test failover does not run consistently on windows
- BUG#16900862: mysqlindexcheck not finding all redundancies
- BUG#16918106: let mysqlfailover run as daemon
- BUG#17019115: mysqluc search "error" string instead of check return code
- BUG#17062943: query failed error in mysqldiff
- BUG#17086766: MUT is unable to run in Jenkins

Release 1.3.3 (Released June 26, 2013)
--------------------------------------

- BUG#16748143 Improve MSI with shortcut to mysqluc
- WL#6814: Debian Packaging mechanism
- BUG#17021113 mysqluc crashes on init due to missing code from branch

Release 1.2.4 (Released June 26, 2013)
--------------------------------------

- BUG#13417229: mysqldbexport/mysqldbimport doesn't work with non-latin data
- BUG#13519748: mysqldbcopy does not copy foreign keys
- BUG#13893128: mysqldbcopy does not copy the charset of the original DB.
- BUG#14348434: Utilities do not permit --skip-grant-tables
- BUG#16344168: mysqluc takes to much time to start.